# Cloud-project

./: .gitignore  README.md  adapter_routes.md  adapter_routes.txt  cloud concept.md  docker-compose.yml  users.sql
APP_AUTH - rest/: .env  Gemfile  docker-compose.yml  docker_entrypoint.sh  graphql_client.rb  login_and_auth.rb  main.rb  register.rb
APP_DEVSTATS - soap/: .env  Dockerfile  build.gradle  docker-compose.yml  docker_entrypoint.sh  settings.gradle
APP_GHSTATS - rest/: .env  .env_public  Dockerfile  docker-compose.yml  docker_entrypoint.sh  package-lock.json  package.json  tsconfig.json
APP_PROJECT_DB - rest/: .env  Dockerfile  docker-compose.yml  docker_entrypoint.sh  main.py
APP_PROJECT_FACADE - graphql/: .env  docker-compose.yml  docker_entrypoint.sh
APP_PROJECT_FACADE - rpc/: .env  Dockerfile  client_projectdb.go  client_userdb.go  docker-compose.yml  docker_entrypoint.sh  go.mod  go.sum  main.go  (+3 more)
CORE_ADAPTER - rest/: .dockerignore  .env  Cargo.toml  Dockerfile  build.rs  docker-compose.yml  docker_entrypoint_build.sh  docker_entrypoint_runtime.sh
CORE_ADAPTER - rest/proto/: facade.proto  gateway.proto
CORE_ADAPTER - rest/src/: grpc_client.rs  grpc_connect.rs  main.rs  rest_listener.rs  rest_router.rs
CORE_ADAPTER - rest/src/proto_generated/: facade_service.rs
CORE_ADAPTER - rest/src/routes/: mod.rs  notifiier.rs  projects.rs  user.rs
CORE_ADAPTER - rest/src/schemas/: mod.rs  notifier.rs  projects.rs  user.rs
GATEWAY-rest/: Cargo.toml  docker_entrypoint_build.sh  docker_entrypoint_runtime.sh
GATEWAY-rest/src/: rest_listener.rs
(+118 files in other folders)
