[package]
name = "GATEWAY-rest"
version = "0.1.0"
edition = "2021" # editie van cargo, de 2024 editie doet raar

[dependencies]
actix-web = "4.0"           # The web framework for handling HTTP requests
serde = { version = "1.0", features = ["derive"] }   # Serialization and deserialization library
serde_json = "1.0"          # For working with JSON
tokio = { version = "1.43", features = ["full"] }  # Async runtime needed for actix-web
dotenvy = "0.15.7"